--- a/app/src/main/res/layout/chatlist_cardview.xml
+++ b/app/src/main/res/layout/chatlist_cardview.xml
@@ -12,6 +12,7 @@
         android:background="#CFDBF1"
         android:padding="5dp"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/chatlist_card_name"
             android:layout_width="match_parent"
@@ -20,7 +21,8 @@
             android:gravity="center_horizontal"
             android:textStyle="bold|italic"
             android:layout_weight="1"
-            android:layout_height="30dp"></TextView>
+            android:layout_height="30dp" />
+
         <TextView
             android:id="@+id/chatlist_card_email"
             android:layout_width="match_parent"
@@ -29,6 +31,6 @@
             android:gravity="center_horizontal"
             android:layout_weight="1"
             android:textStyle="bold|italic"
-            android:layout_height="30dp"></TextView>
+            android:layout_height="30dp" />
     </LinearLayout>
 </LinearLayout>
