--- a/app/src/main/res/layout/activity_chat_screen.xml
+++ b/app/src/main/res/layout/activity_chat_screen.xml
@@ -1,48 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="10"
-    android:padding="5dp"
     tools:context=".Activites.ChatScreen">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/chatlist_appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/chatscreen_toolbar"
+            style="@style/Widget.MaterialComponents.ActionBar.Primary"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:menu="@menu/main_menu"
+            app:title="@string/app_name"
+            app:titleTextColor="@color/white" />
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="10">
 
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/chatscreen_recylerview"
             android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_below="@+id/chatlist_appbar"
+            android:layout_weight="9"
             android:background="@color/grey"
-            android:layout_weight="1"
-            tools:listitem="@layout/chatscreen_cardview"
-            android:layout_height="match_parent" />
+            tools:listitem="@layout/chatscreen_cardview" />
 
-    <LinearLayout
-        android:id="@+id/chatscreen_liner2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="9"
-        android:orientation="horizontal"
-        android:weightSum="5">
+        <RelativeLayout
+            android:id="@+id/chatscreen_liner2"
+            android:layout_width="match_parent"
+            android:layout_height="00dp"
+            android:layout_below="@+id/chatscreen_recylerview"
+            android:layout_alignParentBottom="true"
+            android:layout_weight="1">
 
+            <EditText
+                android:id="@+id/chatscreen_messagebody"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_toStartOf="@+id/chatscreen_send"
+                android:ems="10"
+                android:hint="Type your message"
+                android:inputType="text" />
 
-        <EditText
-            android:id="@+id/chatscreen_messagebody"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="4"
-            android:ems="10"
-            android:hint="Type your message"
-            android:inputType="text" />
+            <Button
+                android:id="@+id/chatscreen_send"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:onClick="Send"
+                android:text="@string/send" />
 
-        <Button
-            android:id="@+id/chatscreen_send"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="@string/send"
-            android:onClick="Send"/>
+        </RelativeLayout>
 
     </LinearLayout>
 
