--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Activites.ChatList">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:title="Logout"
-        android:id="@+id/chatlist_logout">
+        android:id="@+id/chatlist_logout"
+        android:icon="@drawable/logout"
+        app:showAsAction="ifRoom">
     </item>
 
 </menu>
