Reverted Back the Pagination

--- a/app/src/main/res/layout/activity_chat_screen.xml
+++ b/app/src/main/res/layout/activity_chat_screen.xml
@@ -28,14 +28,21 @@
         android:orientation="vertical"
         android:weightSum="10">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/chatscreen_recylerview"
-            android:layout_width="match_parent"
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipe"
+            android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_weight="9"
-            android:layout_below="@+id/chatlist_appbar"
-            android:background="@color/grey"
-            tools:listitem="@layout/chatscreen_cardview" />
+            android:layout_weight="9">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/chatscreen_recylerview"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_below="@+id/chatlist_appbar"
+                android:layout_weight="9"
+                android:background="@color/grey"
+                tools:listitem="@layout/chatscreen_cardview" />
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
         <RelativeLayout
             android:id="@+id/chatscreen_liner2"
@@ -54,8 +61,8 @@
                 android:hint="Type your message here"
                 android:inputType="textMultiLine"
                 android:lines="8"
-                android:maxLines="10"
                 android:maxLength="500"
+                android:maxLines="10"
                 android:scrollbars="vertical" />
 
             <Button
