--- a/app/src/main/res/layout/activity_chat_screen.xml
+++ b/app/src/main/res/layout/activity_chat_screen.xml
@@ -28,6 +28,11 @@
         android:orientation="vertical"
         android:weightSum="10">
 
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="9"
+            android:id="@+id/swiperefresh">
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/chatscreen_recylerview"
                 android:layout_width="match_parent"
@@ -36,6 +41,7 @@
                 android:layout_weight="9"
                 android:background="@color/grey"
                 tools:listitem="@layout/chatscreen_cardview" />
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
         <RelativeLayout
             android:id="@+id/chatscreen_liner2"
