--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     // For ToolBar use 500 or 600 density
-    <color name="colorPrimaryDark">#7B1FA2</color>
+    <color name="colorPrimaryDark">#3949ab</color>
     // For Status bar use 700 or 800
-    <color name="colorAccent">#D81B60</color>
-    <color name="colorBackgroud">#9C27B0</color>
+    <color name="colorAccent">#283593</color>
+    <color name="colorBackgroud">#c5cae9</color>
+    <color name="colorCardView">#7986cb</color>
     // For Menu
     <color name="textColor">#FFFFFF</color>
     // For Menu Text
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
     <color name="green">#6EE68C</color>
     <color name="grey">#EFF4EE</color>
-    <color name="colorPrimary">#9C27B0</color>
+    <color name="colorPrimary">#3f51b5</color>
+    <color name="grainColor">#c5cae9</color>
 </resources>
