--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,9 @@
     // For Menu
     <color name="textColor">#FFFFFF</color>
     // For Menu Text
+    <color name="chatscreenbackgroud">#e8eaf6</color>
+
+
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="green">#6EE68C</color>
