Profile Fragment Work

--- a/app/src/main/res/layout/activity_chat_screen.xml
+++ b/app/src/main/res/layout/activity_chat_screen.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:fitsSystemWindows="true"
+    android:orientation="vertical"
     tools:context=".Activites.ChatScreen">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -29,6 +29,9 @@
         android:layout_height="match_parent"
         android:background="@color/chatscreenbackgroud"
         android:orientation="vertical"
+        android:paddingLeft="2dp"
+        android:paddingEnd="2dp"
+        android:paddingRight="2dp"
         android:weightSum="10">
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
@@ -50,6 +53,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
+            android:layout_weight="0.5"
             android:background="@android:color/transparent"
             android:orientation="horizontal">
 
@@ -86,11 +90,13 @@
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/btn_send"
-                android:layout_width="55dp"
-                android:layout_height="55dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:backgroundTint="@color/colorPrimary"
                 android:onClick="Send"
+                android:padding="5dp"
+                android:scaleType="center"
                 android:src="@drawable/ic__send_black_24dp"
                 android:visibility="visible"
                 app:tint="@android:color/white" />
