--- a/app/src/main/res/layout/chatlist_cardview.xml
+++ b/app/src/main/res/layout/chatlist_cardview.xml
@@ -14,18 +14,19 @@
         android:orientation="horizontal"
         android:weightSum="10">
 
-        <LinearLayout android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:padding="3dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/chatlist_profilePic"
                 android:layout_width="56dp"
                 android:layout_height="56dp"
                 android:background="@color/white"
+                android:src="@drawable/profile"
                 app:civ_border_color="@color/white"
-                app:civ_border_width="0.5dp"
-                android:src="@drawable/profile">
-            </de.hdodenhof.circleimageview.CircleImageView>
+                app:civ_border_width="0.5dp"></de.hdodenhof.circleimageview.CircleImageView>
         </LinearLayout>
 
         <LinearLayout
@@ -37,19 +38,19 @@
                 android:id="@+id/chatlist_card_name"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
+                android:layout_marginStart="10dp"
                 android:layout_weight="1"
                 android:gravity="left"
                 android:textSize="16sp"
-                android:layout_marginStart="10dp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/chatlist_card_email"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
+                android:layout_marginStart="10dp"
                 android:layout_weight="1"
                 android:gravity="left"
-                android:layout_marginStart="10dp"
                 android:textSize="12sp" />
 
             <View
