--- a/app/src/main/res/layout/activity_chat_screen.xml
+++ b/app/src/main/res/layout/activity_chat_screen.xml
@@ -8,21 +8,37 @@
     android:orientation="vertical"
     tools:context=".Activites.ChatScreen">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/chatlist_appbar"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary">
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/chatscreen_toolbar"
-            style="@style/Widget.MaterialComponents.ActionBar.Primary"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/chatscreen_profilepic"
+            android:layout_width="56dp"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@android:color/transparent"
+            android:padding="3dp"
+            android:src="@drawable/profile" />
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/chatlist_appbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorPrimary"
-            app:menu="@menu/main_menu"
-            app:title="@string/app_name"
-            app:titleTextColor="@color/white" />
-    </com.google.android.material.appbar.AppBarLayout>
+            android:layout_toEndOf="@+id/chatscreen_profilepic"
+            android:background="@android:color/transparent"
+            app:elevation="0dp">
+
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/chatscreen_toolbar"
+                style="@style/Widget.MaterialComponents.ActionBar.Primary"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:menu="@menu/main_menu"
+                app:title="@string/app_name"
+                app:titleTextColor="@color/white" />
+        </com.google.android.material.appbar.AppBarLayout>
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -99,6 +115,7 @@
                 android:scaleType="center"
                 android:src="@drawable/ic__send_black_24dp"
                 android:visibility="visible"
+                app:borderWidth="0dp"
                 app:tint="@android:color/white" />
         </LinearLayout>
     </LinearLayout>
