--- a/app/src/main/res/layout/chatscreen_cardview.xml
+++ b/app/src/main/res/layout/chatscreen_cardview.xml
@@ -8,29 +8,44 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingRight="40dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingRight="40dp">
 
-        <TextView
-            android:id="@+id/receiver_message_text"
+
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="3dp"
-            android:background="@drawable/item_round_chat_reciever"
-            android:padding="10dp"
-            android:text="receiver messages here"
-            android:textColor="@android:color/black"
-            android:textSize="14sp"
-            android:textStyle="bold" />
+            android:layout_marginTop="10dp">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/chatscreen_recieverdp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="3dp"
+                android:src="@drawable/profile"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/receiver_message_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="3dp"
+                android:layout_toEndOf="@+id/chatscreen_recieverdp"
+                android:background="@drawable/item_round_chat_reciever"
+                android:padding="10dp"
+                android:text="receiver messages here"
+                android:textColor="@android:color/black"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="40dp"
         android:layout_alignParentRight="true"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingLeft="40dp">
 
         <TextView
             android:id="@+id/sender_messsage_text"
