--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -15,7 +15,8 @@
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profile_imageview"
@@ -30,6 +31,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|right"
                 android:layout_margin="16dp"
+                app:borderWidth="0dp"
+                android:background="@android:color/transparent"
                 android:backgroundTint="@color/colorPrimary"
                 android:src="@drawable/ic_baseline_photo_camera_24"
                 app:tint="@color/white" />
