--- a/app/src/main/res/layout/chatscreen_cardview.xml
+++ b/app/src/main/res/layout/chatscreen_cardview.xml
@@ -41,6 +41,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
@@ -61,5 +62,19 @@
             android:textSize="16sp"
             android:textStyle="bold" />
     </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/linear"
+        android:layout_alignParentEnd="true"
+        android:paddingBottom="2dp">
+
+        <TextView
+            android:id="@+id/sender_message_seen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Delivered" />
+    </RelativeLayout>
 
 </RelativeLayout>
