--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -39,4 +39,41 @@
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
     </RelativeLayout>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/profile_relativelayout"
+        android:layout_centerHorizontal="false"
+        android:textAlignment="center">
+
+        <TextView
+            android:id="@+id/profile_email"
+            android:layout_width="336dp"
+            android:layout_height="33dp"
+            android:layout_marginTop="28dp"
+            android:padding="5sp"
+            android:text="Email"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toEndOf="@+id/profile_name"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/profile_name"
+            app:layout_constraintTop_toBottomOf="@+id/profile_name" />
+
+        <TextView
+            android:id="@+id/profile_name"
+            android:layout_width="336dp"
+            android:layout_height="33dp"
+            android:padding="5sp"
+            android:text="Name"
+            android:textColor="@color/black"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.506"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.132" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </RelativeLayout>
